ajout partie big picture

--- a/index.html
+++ b/index.html
@@ -142,9 +142,22 @@ Take
     </div>
         </div>
     </section>
-<section id="details"></section>
-<!-- Section 5 Big picture -->
-<section id="big_picture"></section>
+<section id="big_picture">
+<div class="container-fluid">
+    <div class="row">
+       <div class="col-6 d-flex flex-column pixel justify-content-center align-content-center"> 
+           
+        <h2 class=" text-white">More power <br> behind every pixel</h2>
+       
+       <p class="text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores molestias repellendus distinctio quasi excepturi expedita quod fugit aperiam amet, reprehenderit consequuntur vero debitis cupiditate vel quam culpa! Natus, optio pariatur!</p>
+       <a href="#" class="text-white my-4 text-decoration-none">Find Out More →</a></div>
+    </div>
+</div>
+
+</div>
+
+
+</section>
 <!-- Section 6 A propos -->
 <section id="about"></section>
 <!-- Section 7 Gammes de prix  -->
